--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <!-- PROJECT 1 -->
                 <div class="project-card">
                     <!-- YAHAN APNE PROJECT KA SCREENSHOT URL DAAL DO -->
-                    <img src="https://via.placeholder.com/600x400" alt="Project 1">
+                    <img src="e-commerce.png" alt="Project 1">
                     <div class="project-info">
                         <!-- YAHAN PROJECT KA NAAM DAAL DO -->
                         <h3>E-Commerce Website</h3>
@@ -138,7 +138,7 @@
 
                 <!-- PROJECT 2 -->
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/600x400" alt="Project 2">
+                    <img src="personal blog.png" alt="Project 2">
                     <div class="project-info">
                         <h3>Personal Blog</h3>
                         <p>Next.js blog with MDX support and SEO optimization.</p>
@@ -148,7 +148,7 @@
 
                 <!-- PROJECT 3 -->
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/600x400" alt="Project 3">
+                    <img src="task manager.png" alt="Project 3">
                     <div class="project-info">
                         <h3>Task Manager App</h3>
                         <p>Full-stack app with user auth and real-time updates.</p>
