--- a/index.html
+++ b/index.html
@@ -419,10 +419,18 @@ footer {
 </section>
 
 <!-- FOOTER -->
-<footer>
-    <p>© 2026 Ritesh Kumar Singh. All Rights Reserved.</p>
-</footer>
-
-</div>
+ <footer>
+        <div class="container">
+            <!-- YAHAN COPYRIGHT ME APNA NAAM AUR YEAR DAAL DO -->
+            <p>&copy; 2026 ritesh kumar Singh. All Rights Reserved.</p>
+            <div class="social-links">
+                <!-- YAHAN APNE SOCIAL LINKS DAAL DO -->
+                <a href="https://www.linkedin.com/in/mr-ritesh-singh-700693383?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a> |
+                <a href="https://github.com/riteshsingh-rr" target="_blank">GitHub</a> |
+                <a href="https://x.com/RiteshRaj468246" target="_blank">Twitter</a>
+                <!-- AUR SOCIALS ADD KAR SAKTE HO -->
+            </div>
+        </div>
+    </footer
 </body>
 </html>
