--- a/index.html
+++ b/index.html
@@ -425,9 +425,12 @@ footer {
             <p>&copy; 2026 ritesh kumar Singh. All Rights Reserved.</p>
             <div class="social-links">
                 <!-- YAHAN APNE SOCIAL LINKS DAAL DO -->
-                <a href="https://www.linkedin.com/in/mr-ritesh-singh-700693383?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a> |
-                <a href="https://github.com/riteshsingh-rr" target="_blank">GitHub</a> |
+                <a href="https://www.linkedin.com/in/mr-ritesh-singh-700693383?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a> 
+                <img src="linkdin.png" alt="linkdin">|
+                <a href="https://github.com/riteshsingh-rr" target="_blank">GitHub</a>|
+                <img src="github.png" alt="github">
                 <a href="https://x.com/RiteshRaj468246" target="_blank">Twitter</a>
+                <img src="twitter.png" alt="twitter">
                 <!-- AUR SOCIALS ADD KAR SAKTE HO -->
             </div>
         </div>
