--- a/index.html
+++ b/index.html
@@ -426,11 +426,11 @@ footer {
             <div class="social-links">
                 <!-- YAHAN APNE SOCIAL LINKS DAAL DO -->
                 <a href="https://www.linkedin.com/in/mr-ritesh-singh-700693383?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a> 
-                <img src="linkdin.png" alt="linkdin">|
+                <img src="linkdin.png" width="20px" height="30px" alt="linkdin">|
                 <a href="https://github.com/riteshsingh-rr" target="_blank">GitHub</a>|
-                <img src="github.png" alt="github">
+                <img src="github.png" width="20px" height="30px" alt="github">
                 <a href="https://x.com/RiteshRaj468246" target="_blank">Twitter</a>
-                <img src="twitter.png" alt="twitter">
+                <img src="twitter.png" width="20px" height="30px" alt="twitter">
                 <!-- AUR SOCIALS ADD KAR SAKTE HO -->
             </div>
         </div>
